<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <Button
        android:id="@+id/button_mode_10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/play_ten_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/button_mode_20"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/button_mode_20"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/play_twelve_card"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mode_10"
        app:layout_constraintBottom_toTopOf="@+id/button_leaderboard" />

    <Button
        android:id="@+id/button_leaderboard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/leaderboard"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_mode_20"
        app:layout_constraintBottom_toTopOf="@+id/button_exit" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_leaderboard"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>